client/css/styles.css
body{
		background-image: url("/images/dark_wood_panel.jpg");
}

#login-dropdown-list .dropdown-toggle{
		line-height:3.5;
}
#login-dropdown-list .dropdown-menu{
		text-align:right;
		width: auto;
		min-width:300px;
}

#mainAlert{
		position:fixed;
		display:block;
		top:20px;
		width:50%;
		margin-left:25%;
		margin-right:25%;
		z-index:9999;
}
#word-date-bookend{
		padding: 0px;
}
#words-well{
		position:relative;
}
#prev-page-arrow{
		position:absolute;
		left:-25px;

		top:0px;
}
#next-page-arrow{
		position:absolute;
		right:-25px;
		bottom:0px;
}
#first-date{
		position: absolute;
		top:-20px;
		left:-25px;
		color: #cccccc;
}

#last-date{
		position: absolute;
		bottom:-20px;
		right:-25px;
		color: #bbbbbb;
}
@media screen and (max-width: 768px){
		#prev-page-arrow{
				left:-15px;
		}
		#next-page-arrow{
				right:-15px;
		}
		#first-date{
				left:-15px;
		}
		#last-date{
				right:-15px;
		}

}



.full-width{
		width:100%;
}

.centered{
		text-align:center;
}

.white{
		color:white;
}

.transparent{
		opacity: .8;
}

footer{
		text-align:center;
		color:white;
}

